# ControlAcceso

./: Cargo.toml
public/js/: api.js  dashboard.js  permisos.js
public/seguridad/: permisos.html
src/: main.rs
src/config/: jwt.rs
src/db/: connection.rs
src/middleware/: jwt_middleware.rs
src/models/: claims.rs  mod.rs  perfil.rs  permiso_perfil.rs  usuario.rs
src/modules/: mod.rs
src/modules/auth/: login.rs  mod.rs
src/modules/seguridad/: menu.rs  mod.rs  perfil.rs  permisos.rs  usuario.rs
src/services/: mod.rs  permiso_service.rs
static/: index.html  login.html
static/js/: login.js  menu.js
