[package]
name = "ControldeAcceso"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
bcrypt = "0.15"
chrono = "0.4"
futures-util = "0.3.31"
actix-files = "0.6"
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "chrono",
    "tls-rustls"
] }

dotenv = "0.15"